@@ -773,10 +773,6 @@ var ". $js_id ." = new FCKeditor( '". $textarea_id ."' );
     $advanced_uploads = ($conf['upload_advanced']=="t");
     $basic_uploads = ($conf['upload_basic']=="t");
 
-    if (function_exists('img_assist_perm')) {
-      $element['#suffix'] .= "var fckImgAssistPath = '". base_path() . drupal_get_path('module', 'img_assist') ."';\n";
-    }
-
     // add code for filebrowser for users that have access
     if (user_access('allow fckeditor file uploads')==1) {
       if (isset($conf['imce']) && $conf['imce']=="t" && function_exists('imce_menu')) {
